name:                pure-events
version:             0.8.0.0
homepage:            purehs.org/doc/pure-events
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-events.git

library
  build-depends:
    base,
    containers,
    pure-core,
    pure-default,
    pure-lifted,
    pure-txt

  hs-source-dirs: src

  exposed-modules:
    Pure.Data.Events

  default-language: Haskell2010
